# Optica

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  demo_lexer.py  optica  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_lp_production.optica  02_milp_facility.optica  03_nlp_portfolio.optica  04_convex_svm.optica  05_qp_regression.optica  06_dp_inventory.optica  07_stochastic_farmer.optica  08_combinatorial_tsp.optica  09_metaheuristic_vrp.optica  10_cp_scheduling.optica  11_moo_supply_chain.optica  12_ml_optimization.optica  13_largescale_decomposition.optica  advanced_features.optica  juku_data.json  juku_timetabling.optica  knapsack.optica  simple_knapsack.optica
optica/: __init__.py  lexer.py  tokens.py
src/: cli.rs  config.rs  main.rs  parser.rs
src/solver/: cpsat.rs  mod.rs  objective.rs  rng.rs
tests/: __init__.py  test_lexer.py
